--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "java"
     id "edu.wpi.first.GradleRIO" version "2025.3.1"
 }
+//removed cuz it wasnt working
 
 java {
     sourceCompatibility = JavaVersion.VERSION_17
